--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.52.3",
     "web-vitals": "^2.1.4"
   },
